2010-03-24  John W. Eaton  <jwe@octave.org>

	* configure.ac (AC_INIT): Version is now 3.3.51.
	(OCTAVE_API_VERSION_NUMBER): Now 39.
	(OCTAVE_RELEASE_DATE): Now 2010-03-24.

2010-03-24  John W. Eaton  <jwe@octave.org>

	* NEWS: Style fixes.

2010-03-23  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Update.

2010-03-15  John W. Eaton  <jwe@octave.org>

	* configure.ac (AH_BOTTOM): Define GNULIB_NAMESPACE.

2010-03-09  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Update.

2010-03-01  John W. Eaton  <jwe@octave.org>

	* acinclude.m4 (OCTAVE_CXX_COMPLEX_REFERENCE_ACCESSORS,
	OCTAVE_CXX_COMPLEX_SETTERS): New macros.
	* configure.ac: Use them.

2010-02-25  John W. Eaton  <jwe@octave.org>

	* gdbinit: New file.
	* Makefile.am (EXTRA_DIST): Add it to the list.
	(all-local): Depend on .gdbinit.
	(.gdbinit): New rule.

2010-02-22  John W. Eaton  <jwe@octave.org>

	* boostrap: Update from gnulib/build-aux/bootstrap.

2010-02-21  Michael Goffioul  <michael.goffioul@gmail.com>

	* configure.ac: Define NOMINMAX under MSVC.

	* configure.ac: Add pcre_config --cflags to XTRA_CXXFLAGS instead of
	CPPFLAGS.

2010-02-17  John W. Eaton  <jwe@octave.org>

	* configure.ac: Add $COLAMD_LDFLAGS $COLAMD_LIBS $AMD_LDFLAGS,
	and $AMD_LIBS to LIBS when checking for cholmod library.

2010-02-17  John W. Eaton  <jwe@octave.org>

	* acinclude.m4 (OCTAVE_CHECK_FORTRAN_INTEGER_SIZE): Save and
	restore FFLAGS.  Temporarily add F77_INTEGER_8_FLAG to FFLAGS.
	* common.mk (F77_INTEGER_8_FLAG): New variable.
	(do_subst_config_vals): Substitute it.
	* configeure.ac: Don't add -fdefault-integer-8 to FFLAGS. 
	Substitute F77_INTEGER_8_FLAG.  Improve --enable-64 warning.

2010-02-15  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Update.

2010-02-10  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Update.

2010-02-08  John W. Eaton  <jwe@octave.org>

	* bootstrap.conf (gnulib_modules): Include progname in the list.

2010-02-08  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Update.
