@@ -56,6 +56,9 @@ gnulib_modules="
   unlink
   vsnprintf
   round
+  roundf
+  trunc
+  truncf
 "
 
 # Additional xgettext options to use.  Use "\\\newline" to break lines.
